--- a/app/src/main/res/layout/message_list_layout.xml
+++ b/app/src/main/res/layout/message_list_layout.xml
@@ -7,7 +7,7 @@
     android:padding="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile"
+        android:id="@+id/add"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/test_cover" />
