--- a/app/src/main/res/layout/test_journal_list_style.xml
+++ b/app/src/main/res/layout/test_journal_list_style.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile"
+            android:id="@+id/add"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
@@ -25,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/profile"
-            android:layout_toRightOf="@+id/profile"
+            android:layout_toEndOf="@+id/add"
+            android:layout_toRightOf="@+id/add"
             android:layout_marginLeft="16dp"
             android:text="毛毛"
             android:textColor="@color/gray"
