--- a/app/src/main/res/layout/test_post_detail_up.xml
+++ b/app/src/main/res/layout/test_post_detail_up.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <!--封面-->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -20,8 +21,9 @@
 
 
     </FrameLayout>
+    <!--申請-->
     <ImageButton
-        android:id="@+id/profile"
+        android:id="@+id/add"
         android:layout_width="110dp"
         android:layout_height="60dp"
         android:layout_gravity="bottom|right"
@@ -50,6 +52,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
+            <!--圓形頭貼-->
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/circleImageView"
                 android:layout_width="35dp"
@@ -167,6 +170,7 @@
 "
                 android:textSize="15sp" />
 
+            <!--標籤-->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -247,6 +251,7 @@
 
     </LinearLayout>
 
+    <!--留言-->
     <fragment
         android:id="@+id/bottom_content"
         android:layout_width="match_parent"
