--- a/app/src/main/res/layout/test_post_list_style.xml
+++ b/app/src/main/res/layout/test_post_list_style.xml
@@ -47,7 +47,7 @@
         android:layout_below="@+id/fl_top" >
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile"
+            android:id="@+id/add"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/test_cover"
